tests/integration/asn1/validation/08_duplicate_module_in_command_line_arguments/test.itest
RUN: (%asn1_parser generate-cfs \
RUN: %S/module_a.asn %S/module_b.asn \
RUN: --asn1-modules=module-a,module-b,module-b ; \
RUN: test $? = 1) \
RUN: | filecheck %s --dump-input=fail

CHECK: error: an issue occurred when validating the ASN.1 bundle: The module module-b is found multiple times in the --asn1-modules command-line argument.